# datasette-metadata-editable

./: Justfile  NOTES.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_metadata_editable/: __init__.py  internal_migrations.py  schema.sql
datasette_metadata_editable/templates/: datasette_metadata_editable_edit.html  edit.html
tests/: metadata.yaml  test_metadata_editable.py
tests/__snapshots__/: test_metadata_editable.ambr
