[project]
name = "datasette-metadata-editable"
version = "0.0.1a14"
description = ""
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette>=1.0a7",
    "markdown2>=2.4.10",
    "nh3==0.2.14",
    "sqlite-migrate>=0.1b0",
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-metadata-editable"
Changelog = "https://github.com/datasette/datasette-metadata-editable/releases"
Issues = "https://github.com/datasette/datasette-metadata-editable/issues"
CI = "https://github.com/datasette/datasette-metadata-editable/actions"

[project.entry-points.datasette]
metadata_editable = "datasette_metadata_editable"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "ruff", "syrupy"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_metadata_editable = ["static/*", "templates/*", "*.sql"]
